# robotics_software_engineer

./: .gitattributes  .gitmodules  README.md
01_build_my_world/: CMakeLists.txt
01_build_my_world/model/Roboter/: model.config  model.sdf
01_build_my_world/model/apartment/: model.sdf
01_build_my_world/script/: home_plugin.cpp
01_build_my_world/world/: home
02_arm_mover_excercise/devel/: .catkin  _setup_util.py  setup.sh
02_arm_mover_excercise/devel/lib/pkgconfig/: simple_arm.pc
02_arm_mover_excercise/devel/lib/simple_arm/: arm_mover  look_away
02_go_chase_it/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
02_go_chase_it/devel/lib/pkgconfig/: my_robot.pc
02_go_chase_it/src/ball_chaser/: CMakeLists.txt
02_go_chase_it/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
02_go_chase_it/src/my_robot/launch/: world.launch
02_go_chase_it/src/my_robot/urdf/: my_robot.xacro
02_go_chase_it/src/my_robot/worlds/: home.world  new_world_and_white_ball.world
03_where_am_i/src/my_robot/config/: particles.rviz
03_where_am_i/src/my_robot/launch/: amcl.launch  robot_description.launch
03_where_am_i/src/my_robot/maps/: new_world_cropped.pgm
03_where_am_i/src/my_robot/urdf/: my_robot.xacro
04_map_my_world/src/my_robot/launch/: amcl.launch  (+4 more)
05_home_service_robot/src/add_markers/: CMakeLists.txt
05_home_service_robot/src/map/: map_cropped.pgm  new_world.yaml
05_home_service_robot/src/pick_objects/: CMakeLists.txt
05_home_service_robot/src/scripts/: add_markers.sh  home_service.sh  test_navigation.sh  test_slam.sh
media/: new_world.world
(+18 files in other folders)
